src/stylesheets/utility/_spacing.scss
/**
* Margin top
*/

.mt-0 {
    margin-top: 0;
}

.mt-half {
    margin-top: .1em;
}

@for $i from 0 through 15 {
    .mt-#{$i} {
        margin-top: $i * 8px
    }

    .mt-#{$i}-small {
        @include respond-to(small) {
            margin-top: $i * 8px
        }
    }

    .mt-#{$i}-medium {
        @include respond-to(medium) {
            margin-top: $i * 8px
        }
    }
}

/**
* Margin bottom
*/

.mb-0 {
    margin-bottom: 0;
}

.mb-half {
    margin-bottom: .1em;
}

@for $i from 1 through 15 {
    .mb-#{$i} {
        margin-bottom: $i * 8px
    }

    .mb-#{$i}-small {
        @include respond-to(small) {
            margin-bottom: $i * 8px
        }
    }

    .mb-#{$i}-medium {
        @include respond-to(medium) {
            margin-bottom: $i * 8px
        }
    }
}

.mr-a {
    margin-right: auto;
}

.mr-a-small {
    @include respond-to(small) {
        margin-right: auto;
    }
}

.ml-a {
    margin-left: auto;
}

.ml-a-only-small {
    margin-left: auto;

    @include respond-to(small) {
        margin-left: 0;
    }
}

.ml-a-small {
    @include respond-to(small) {
        margin-left: auto;
    }
}

.pt-2 {
    padding-top: 16px;
}
.pb-2 {
    padding-bottom: 16px;
}
.pb-0 {
    padding-bottom: 0;
}

